mail-times were not aligned, fixed

--- a/styling/exercise13.css
+++ b/styling/exercise13.css
@@ -60,6 +60,7 @@
   font-family: Arial, Helvetica, sans-serif;
   padding: 10px;
   padding-left: 15px;
+  padding-right: 15px;
 }
 
 .one-mail-interface {
@@ -93,6 +94,7 @@
 }
 
 .mail-information-block {
+  width: 100%;
   display: block;
   margin-left: 10px;
 }
